--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <meta " content="IE=edge">
-    <meta minlength="2">
-        <label>Type Your Message</label>
-        <input class="usermsg" type="text" minlength="20">
-        <button>Summit</button>
-    </form>
-</body>
-</html>
+    <meta 
